test/conformance/reject/time_relative_fmt.hdoc
hdoc(version="2.0", lang="en", tz="+00:00");

p { \time(fmt="relative") "12:00:00Z" }
